# bytemason

./: .env.example  .env.local  .gitignore  .lumoscache_chat_and_embeddings.db  404.html  README.md  build-a-to-do-list-app-spec.json  build-a-todo-app-with-crud-operations-spec.json  create-simple-to-do-application-spec.json  create-to-do-application-spec.json  index.html  mkdocs.yml  pyproject.toml  scaffold.json  simple-to-do-application-spec.json  sitemap.xml  to-do-application-spec.json  to-do-list-app-with-ai-features-spec.json  to-do-list-application-spec.json  todo-application-spec.json
Spec_Gen/: index.html
To-Do Application/: package-lock.json  package.json
To-Do Application/app/: layout.tsx  page.tsx
To-Do Application/components/: ButtonAccount.tsx  LayoutClient.tsx
To-Do Application/components/feature/: TaskForm.tsx  TaskItem.tsx  (+1 more)
To-Do Application/lib/: supabase.ts
To-Do Application/types/: index.ts
agents/: index.html
base_scaffold/: index.html
blueberry/: agents.py  models.py
boilerplate/: config.ts  package.json  scaffold.json  tailwind.config.js
boilerplate/app/: globals.css  layout.tsx  page.tsx
boilerplate/libs/: api.ts  seo.tsx
boilerplate/types/: config.ts
docs/: Spec_Gen.md  agents.md  base_scaffold.md  index.md  tests.md
frontend/: .gitignore  README.md  mdx-components.tsx  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: fonts.ts  globals.css  layout.tsx  page.tsx
frontend/content/: index.mdx
old-stuff/: package.json
prompts/: core_prompt.md  master_prompt.md  scaffold_merge_prompt.md
psosp/: package-lock.json
python/: init.py  mkdocs.yml
python/docs/: spec_gen.md
search/: search_index.json
specs/: next.js_14_+_supabase_task_management_app_spec.json  next.js_14_+_supabase_todo_application_spec.json  next.js_task_management_app_spec.json  next.js_to-do_application_with_supabase_spec.json  next.js_todo_app_with_supabase_spec.json  task_management_app_spec.json  task_management_application_spec.json  task_management_system_spec.json  task_manager_app_spec.json  task_manager_spec.json  task_manager_with_user_authentication_and_task_management_spec.json  taskify_spec.json  taskman_spec.json  taskmanagerapp_spec.json  taskmaster_spec.json  to-do_application_with_supabase_and_next.js_spec.json  to-do_list_application_spec.json  todo_application_with_supabase_&_next.js_14_spec.json
src/blueberry/: agents.py  cli.py  models.py  planning.py  repair_agent.py
strawberry/: README.md  next.config.ts
tests/: index.html  test_spec_gen.py
(+25 files in other folders)
