[project]
name = "blueberry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "lumos",
    "pydantic>=2.10.6",
    "typer>=0.9.0",
    "rich>=13.7.0",
]

[project.scripts]
berry = "blueberry.cli:run"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["blueberry*"]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "mkdocs-material>=9.6.3",
    "ipykernel>=6.29.5",
]

[tool.uv.sources]
lumos = { git = "https://github.com/lumiralabs/lumos.git", rev = "77fc242f16e87efefe943f2ea34543a902422906" }
