[project]
name = "blueberry"
version = "0.1.0"
description = "AI-powered full-stack app generator"
authors = [
    {name = "Jay", email = "jay@example.com"},
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.7.0",
    "pydantic>=2.5.2",
    "httpx>=0.25.2",
    "openai>=1.3.7",
    "lumos>=0.1.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
berry = "blueberry.cli:run"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.setuptools.packages.find]
where = ["src"]
include = ["blueberry*"]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "mkdocs-material>=9.6.3",
    "ipykernel>=6.29.5",
]

[tool.uv.sources]
lumos = { git = "https://github.com/lumiralabs/lumos.git", rev = "77fc242f16e87efefe943f2ea34543a902422906" }
