[project]
name = "blueberry"
version = "0.0.1"
description = "AI-powered full-stack app generator"
authors = [
    {name = "Jay", email = "jay@lumiralabs.com"},
    {name = "Sarthak", email = "sarthak@lumiralabs.com"},
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.7.0",
    "pydantic>=2.5.2",
    "httpx>=0.25.2",
    "openai>=1.3.7",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
    "lumira-lumos>=0.0.3",
    "pymupdf>=1.25.3",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
mason = "blueberry.cli:run"

[tool.setuptools.packages.find]
where = ["src"]
include = ["blueberry*"]

[tool.ruff]
ignore = ["E722"]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "mkdocs-material>=9.6.3",
    "ipykernel>=6.29.5",
]
